@@ -2467,3 +2467,9 @@ a <- c(0.1, 0.3, 0.4, 0.5, 0.3, 0.0001)
 format.pval(a, eps=0.01)
 format.pval(a, eps=0.01, nsmall =2)
 ## granted in 2.12.0
+
+
+## printing fractional dates
+as.Date(0.5, origin="1969-12-31")
+## changed to round down in 2.12.1
+
